--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -2,7 +2,7 @@
 	margin-top: auto;
 	background-color: #212121;
 	color: white;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: auto;
